# mipt

./: .gitignore  readme.md
algorithms/number_theory/: C_n_k.cpp  a.out  binpow.cpp  coprime.cpp  eratosthenes_sieve.cpp  fft.cpp  gcd.cpp  reprocical.cpp  stirling_number.cpp
algorithms/trees/: avl_tree.cpp  cartesian_tree.cpp  fenvik3d.cpp  implicit_cartesian_tree.cpp  splay_tree.cpp
grade_1/: readme.md
grade_1/course_algorithms/hw_contest_1/: a.c  b.c  d.c
grade_1/course_babichev/lec_4/: test.c
grade_1/course_babichev/lec_heap/: a.c
grade_1/course_dedinskiy/: readme.md
grade_1/course_dedinskiy/hw_onegin/: general.c  general.h.save  main.c  main.c.save  onegin.zip.txt  readme.md  utest_compare_lines_letters.txt  utest_lines.txt
grade_1/course_dedinskiy/hw_stack/: README.md  general.h  main.c  main.cpp  stack.h
grade_1/course_dedinskiy/hw_stack_crack/: Stack.c  Stack.h  StackRigid.h  main.c
grade_1/field_of_experiment/: test.c
sem_1/: readme.md
sem_1/algorithms/: a.out  avl_map.cpp  cartesian_tree.cpp  fenvik.cpp  segment_tree.cpp  splay_tree.cpp
sem_1/course_algorithms/hw_contest_1/: a.c  c.c  e.c  f.c  g.c
sem_1/course_algorithms/hw_contest_2/: a.c  a.out  b.c  c.c  d.c  e.c  g.c  h.c  prev_c.c
sem_1/course_algorithms/hw_contest_3/: A.cpp  B.cpp  C.cpp  D.cpp  D_.cpp  E.cpp  G.cpp  a.out  test.py  test.t  tmp.cpp  uni.sh
sem_1/course_dedinskiy/: Makefile  template.hpp  txlib.h
sem_1/field_of_experiment/: a.py  donut.c  log.txt
sem_1/general/: a.out  byte_io.c  byte_io.cpp  k_ordered_stat.c  out.tf  partition.c
sem_2/course_babichev/: a.out  djeksta.cpp  floid.cpp  hw10_gorishniy.txt  hw_gorishniy.txt  task.cpp
sem_2/course_dedinskiy/hashtable/: CMakeLists.txt
sem_2/course_dedinskiy/hashtable/src/: C1  C2  C3  a.out  cachegrind.O0  cachegrind.O1  cachegrind.O3  cachegrind.out.63629  cachegrind.out.63692  find_optimize.s  fond.s  for_godbolt.cpp  hashtable.h  ht_node.h  ht_tests.h  intrinsic_types.h  m256.h  main.cpp  main.s  makefile  tabler  tabler_un_opt  tmp
sem_2/course_dedinskiy/hashtable/src/opt/: hashtable.cpp  hashtable.h  ht_node.h  ht_tests.h  main.cpp
sem_2/course_dedinskiy/hashtable/src/un_opt/: hashtable.h  ht_node.h  ht_tests.h  main.cpp
sem_3/dedinskiy/3_particles/: CMakeLists.txt
sem_3/dedinskiy/3_particles/src/: main.cpp
sem_3/dedinskiy/3_particles/src/graphics/: context.h  drawable.h  graphics_lib_interface.h
sem_3/dedinskiy/3_particles/src/utils/: vector2.h
sem_4/ded/logging/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.html  lograph.tmp  page.html  prog
sem_4/ded/logging/formats/: binary_op.gv_format  func.gv_format  head.gv_format  switch_holder_arrow.gv_format  unary_op.gv_format  var_node.gv_format
sem_4/ded/logging/src/: examples.cpp  main.cpp
sem_4/ded/logging/src/event_system/: signal.h
sem_4/ded/logging/src/micro_logger/: MicroLogger.h  func_logger.cpp  func_logger.h  graph_logger.h  logged.h  micro_logger.h  settings.h
sem_4/ded/logging/src/observer/: observed.h  operators.h
sem_4/ded/logging/src/observer/sort/: sort.cpp
sem_4/ded/logging/src/utils/: logger.cpp  logger.h  move_forward.h  smart_file.h  tag.h
sem_4/ded/logging/src/utils/rgba/: rgba.h
sem_4/ded/templates/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.html  lograph.tmp  prog
sem_4/ded/templates/src/: array_test.cpp  main.cpp  print.h
sem_4/ded/templates/src/allocator/: Allocator.h  batch.h  brocken.h  simple.h
sem_4/ded/templates/src/array/: array.h
sem_4/ded/templates/src/function/: function.h  helpers.h
sem_4/ded/templates/src/micro_logger/: micro_logger.h  settings.h
sem_4/ded/templates/src/observer/: observed.h
sem_4/ded/templates/src/storage/: Indexed.h  indexed_chunk.h  indexed_dynamic.h  indexed_static.h
sem_4/ded/templates/src/string/: string.h  string_core.h
sem_4/ded/templates/src/utils/: Utils.h  logger.h  tag.cpp
sem_4/ded/templates/src/utils/micro_logger/: func_logger.h  micro_logger.h
sem_4/ded/templates/src/utils/micro_logger/observer/: observed.h  operators.dsl
sem_4/ded/templates/src/utils/rgba/: rgba.cpp
sem_4/ded/templates/src/vec/: vec.h
(+530 files in other folders)
